--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@
             <div class="wrapper d-flex flex-column align-items-center px-5">
               <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
                 Xidmətləri</a>
-              <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi Xidmətləri</a>
+              <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi
+                Xidmətləri</a>
               <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Məsləhət
                 Xidmətləri</a>
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
@@ -72,9 +73,9 @@
             </div>
           </div>
         </div>
-        <!-- <a href="#" class="primary hover-cc sub-primary">
-          Insights
-        </a> -->
+        <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
+          E-nəşr
+        </a>
       </nav>
     </div>
     <div class="container header-top">
@@ -141,9 +142,12 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Audit xidmətləri</p>
-                        <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının auditi</a>
-                        <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının auditi</a>
-                        <a href="./audit-3.html" class="primary hover-cc">Əmlakın qiymətləndirilməsinin
+                        <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının
+                          auditi</a>
+                        <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının
+                          auditi</a>
+                        <a href="./audit-3.html" class="primary hover-cc">Əmlakın
+                          qiymətləndirilməsinin
                           auditi</a>
                         <a href="./audit-4.html" class="primary hover-cc">Nizamnamə kapitalının
                           formalaşdırılmasın auditi</a>
@@ -177,10 +181,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Vergi xidmətləri</p>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi xidmətləri</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət xidmətləri</a>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi planlaması xidmətləri</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində sair xidmətlər</a>
+                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi
+                          xidmətləri</a>
+                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət
+                          xidmətləri</a>
+                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                          planlaması xidmətləri</a>
+                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində
+                          sair xidmətlər</a>
                       </div>
                     </div>
                     <div class="col-5 p-5 ms-5">
@@ -211,12 +219,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Muhasibatlıq xidmətləri</p>
-                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə uçotunun üzrə autsors
+                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə
+                          uçotunun üzrə autsors
                           xidmətləri</a>
                         <a href="./services-accountment-1.html" class="primary hover-cc">Muhasibat uçotunun üzrə autsors
                           xidməti</a>
 
-                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət rəhbərliyinə xərclər və
+                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət
+                          rəhbərliyinə xərclər və
                           gəlirlilik haqqında
                           hesabatların hazırlanması</a>
                       </div>
@@ -266,7 +276,8 @@
                       <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                       <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                       <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                        hospitallar</a>
                     </div>
                   </div>
 
@@ -392,9 +403,9 @@
                     </div>
                   </div> -->
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-                  Insights
-                </a> -->
+                <a href="insights.html" class="primary hover-cc sub-primary">
+                  E-nəşr
+                </a>
               </nav>
             </div>
           </div>
@@ -456,7 +467,7 @@
       </div>
     </section>
     <section id="map-location" class="my-5">
-      <div class="container-fluid px-0">
+      <div class="container px-0">
         <div class="row flex-column flex-lg-row">
           <div class="col-12 col-lg-6">
             <img src="./assets/img/map-location.png" alt="">
