--- a/audit-3.html
+++ b/audit-3.html
@@ -68,14 +68,13 @@
                             <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                             <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                             <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                                hospitallar</a>
+                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                         </div>
                     </div>
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-          Insights
-        </a> -->
+                <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
+                    E-nəşr
+                </a>
             </nav>
         </div>
         <div class="container header-top">
@@ -125,7 +124,7 @@
                                 <div class="menu services d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
                                         <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="./audit-1.html" class="primary hover-cc sub-act mt-3"
+                                            <a href="./audit.html" class="primary hover-cc sub-act mt-3"
                                                 data-toggle="audit-menu">Audit
                                                 Xidmətləri</a>
                                             <a href="./services-tax.html" class="primary hover-cc sub-act"
@@ -144,15 +143,14 @@
                                         <div class="col-7">
                                             <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                                                 <p class="title mt-1">Audit xidmətləri</p>
-                                                <a href="./audit-1.html" class="primary hover-cc">Vergi
-                                                    hesabatlarının auditi</a>
-                                                <a href="./audit-2.html" class="primary hover-cc">Maliyyə
-                                                    hesabatlarının auditi</a>
+                                                <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının
+                                                    auditi</a>
+                                                <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının
+                                                    auditi</a>
                                                 <a href="./audit-3.html" class="primary hover-cc">Əmlakın
                                                     qiymətləndirilməsinin
                                                     auditi</a>
-                                                <a href="./audit-4.html" class="primary hover-cc">Nizamnamə
-                                                    kapitalının
+                                                <a href="./audit-4.html" class="primary hover-cc">Nizamnamə kapitalının
                                                     formalaşdırılmasın auditi</a>
                                             </div>
                                         </div>
@@ -283,136 +281,136 @@
                                             <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                                             <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                                             <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar
-                                                və hospitallar</a>
+                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                                                hospitallar</a>
                                         </div>
                                     </div>
 
                                     <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
                                     <!-- <div
-                    class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
-                  >
-                    <div class="col-7">
-                      <div
-                        class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                        class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
                       >
-                        <p class="title">Assurance</p>
-                        <a href="#" class="primary hover-cc"
-                          >Business consulting services</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Business process solutions</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Business risk services</a
-                        >
-                        <a href="#" class="primary hover-cc">Cybersecurity</a>
-                        <a href="#" class="primary hover-cc"
-                          >Forensic and investigation services</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Mergers and acquisitions</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Recovery and reorganisation</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Transactional advisory services</a
-                        >
-                        <a href="#" class="primary hover-cc">Valuations</a>
-                      </div>
-                    </div>
-                    <div class="col-5 p-5 ms-5">
-                      <div class="main-card">
-                        <div class="image-wrapper">
-                          <img
-                            src="./assets/img/client-behaviour-300x300.jpg"
-                            alt="Formula driver"
-                          />
-                        </div>
-                        <div class="text-wrapper p-4">
-                          <div class="card-tag darkgray">
-                            BUSINESS RESILENCE
+                        <div class="col-7">
+                          <div
+                            class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                          >
+                            <p class="title">Assurance</p>
+                            <a href="#" class="primary hover-cc"
+                              >Business consulting services</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Business process solutions</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Business risk services</a
+                            >
+                            <a href="#" class="primary hover-cc">Cybersecurity</a>
+                            <a href="#" class="primary hover-cc"
+                              >Forensic and investigation services</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Mergers and acquisitions</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Recovery and reorganisation</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Transactional advisory services</a
+                            >
+                            <a href="#" class="primary hover-cc">Valuations</a>
                           </div>
-                          <a href="#">
-                            <p class="fs-2 primary my-4 fw-600">
-                              Returning your business
-                            </p>
-                          </a>
-
-                          <br />
-                          <p class="card-info mt-2">
-                            Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Quis, temporibus?
-                          </p>
+                        </div>
+                        <div class="col-5 p-5 ms-5">
+                          <div class="main-card">
+                            <div class="image-wrapper">
+                              <img
+                                src="./assets/img/client-behaviour-300x300.jpg"
+                                alt="Formula driver"
+                              />
+                            </div>
+                            <div class="text-wrapper p-4">
+                              <div class="card-tag darkgray">
+                                BUSINESS RESILENCE
+                              </div>
+                              <a href="#">
+                                <p class="fs-2 primary my-4 fw-600">
+                                  Returning your business
+                                </p>
+                              </a>
+    
+                              <br />
+                              <p class="card-info mt-2">
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Quis, temporibus?
+                              </p>
+                            </div>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
-                  >
-                    <div class="col-7">
                       <div
-                        class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                        class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
                       >
-                        <p class="title">Tax</p>
-                        <a href="#" class="primary hover-cc"
-                          >Business consulting services</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Business process solutions</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Business risk services</a
-                        >
-                        <a href="#" class="primary hover-cc">Cybersecurity</a>
-                        <a href="#" class="primary hover-cc"
-                          >Forensic and investigation services</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Mergers and acquisitions</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Recovery and reorganisation</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >Transactional advisory services</a
-                        >
-                        <a href="#" class="primary hover-cc">Valuations</a>
-                      </div>
-                    </div>
-                    <div class="col-5 p-5 ms-5">
-                      <div class="main-card">
-                        <div class="image-wrapper">
-                          <img
-                            src="./assets/img/client-behaviour-300x300.jpg"
-                            alt="Formula driver"
-                          />
-                        </div>
-                        <div class="text-wrapper p-4">
-                          <div class="card-tag darkgray">
-                            BUSINESS RESILENCE
+                        <div class="col-7">
+                          <div
+                            class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                          >
+                            <p class="title">Tax</p>
+                            <a href="#" class="primary hover-cc"
+                              >Business consulting services</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Business process solutions</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Business risk services</a
+                            >
+                            <a href="#" class="primary hover-cc">Cybersecurity</a>
+                            <a href="#" class="primary hover-cc"
+                              >Forensic and investigation services</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Mergers and acquisitions</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Recovery and reorganisation</a
+                            >
+                            <a href="#" class="primary hover-cc"
+                              >Transactional advisory services</a
+                            >
+                            <a href="#" class="primary hover-cc">Valuations</a>
                           </div>
-                          <a href="#">
-                            <p class="fs-2 primary my-4 fw-600">
-                              Returning your business
-                            </p>
-                          </a>
-
-                          <br />
-                          <p class="card-info mt-2">
-                            Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Quis, temporibus?
-                          </p>
                         </div>
-                      </div>
-                    </div>
-                  </div> -->
+                        <div class="col-5 p-5 ms-5">
+                          <div class="main-card">
+                            <div class="image-wrapper">
+                              <img
+                                src="./assets/img/client-behaviour-300x300.jpg"
+                                alt="Formula driver"
+                              />
+                            </div>
+                            <div class="text-wrapper p-4">
+                              <div class="card-tag darkgray">
+                                BUSINESS RESILENCE
+                              </div>
+                              <a href="#">
+                                <p class="fs-2 primary my-4 fw-600">
+                                  Returning your business
+                                </p>
+                              </a>
+    
+                              <br />
+                              <p class="card-info mt-2">
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Quis, temporibus?
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div> -->
                                 </div>
-                                <!-- <a href="#" class="primary hover-cc sub-primary">
-                  Insights
-                </a> -->
+                                <a href="insights.html" class="primary hover-cc sub-primary">
+                                    E-nəşr
+                                </a>
                             </nav>
                         </div>
                     </div>
