--- a/careers-values.html
+++ b/careers-values.html
@@ -68,14 +68,13 @@
                             <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                             <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                             <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                                hospitallar</a>
+                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                         </div>
                     </div>
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-              Insights
-            </a> -->
+                <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
+                    E-nəşr
+                </a>
             </nav>
         </div>
         <div class="container header-top">
@@ -144,15 +143,14 @@
                                         <div class="col-7">
                                             <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                                                 <p class="title mt-1">Audit xidmətləri</p>
-                                                <a href="./audit-1.html" class="primary hover-cc">Vergi
-                                                    hesabatlarının auditi</a>
-                                                <a href="./audit-2.html" class="primary hover-cc">Maliyyə
-                                                    hesabatlarının auditi</a>
+                                                <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının
+                                                    auditi</a>
+                                                <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının
+                                                    auditi</a>
                                                 <a href="./audit-3.html" class="primary hover-cc">Əmlakın
                                                     qiymətləndirilməsinin
                                                     auditi</a>
-                                                <a href="./audit-4.html" class="primary hover-cc">Nizamnamə
-                                                    kapitalının
+                                                <a href="./audit-4.html" class="primary hover-cc">Nizamnamə kapitalının
                                                     formalaşdırılmasın auditi</a>
                                             </div>
                                         </div>
@@ -283,8 +281,8 @@
                                             <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                                             <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                                             <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar
-                                                və hospitallar</a>
+                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                                                hospitallar</a>
                                         </div>
                                     </div>
 
@@ -410,9 +408,9 @@
                         </div>
                       </div> -->
                                 </div>
-                                <!-- <a href="#" class="primary hover-cc sub-primary">
-                      Insights
-                    </a> -->
+                                <a href="insights.html" class="primary hover-cc sub-primary">
+                                    E-nəşr
+                                </a>
                             </nav>
                         </div>
                     </div>
