--- a/services-tax-3.html
+++ b/services-tax-3.html
@@ -69,9 +69,9 @@
             </div>
           </div>
         </div>
-        <!-- <a href="#" class="primary hover-cc sub-primary">
-          Insights
-        </a> -->
+        <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
+          E-nəşr
+        </a>
       </nav>
     </div>
     <div class="container header-top">
@@ -389,9 +389,9 @@
                     </div>
                   </div> -->
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-                  Insights
-                </a> -->
+                <a href="insights.html" class="primary hover-cc sub-primary">
+                  E-nəşr
+                </a>
               </nav>
             </div>
           </div>
