--- a/team.html
+++ b/team.html
@@ -37,7 +37,8 @@
         <div class="menu services d-flex" data-toggle="services-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit Xidmətləri</a>
+              <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
+                Xidmətləri</a>
               <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi Xidmətləri</a>
               <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Məsləhət
                 Xidmətləri</a>
@@ -67,9 +68,9 @@
             </div>
           </div>
         </div>
-        <!-- <a href="#" class="primary hover-cc sub-primary">
-            Insights
-          </a> -->
+        <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
+          E-nəşr
+        </a>
       </nav>
     </div>
     <div class="container header-top">
@@ -267,129 +268,129 @@
 
                   <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
                   <!-- <div
-                      class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
-                    >
-                      <div class="col-7">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                    class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
+                  >
+                    <div class="col-7">
+                      <div
+                        class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                      >
+                        <p class="title">Assurance</p>
+                        <a href="#" class="primary hover-cc"
+                          >Business consulting services</a
                         >
-                          <p class="title">Assurance</p>
-                          <a href="#" class="primary hover-cc"
-                            >Business consulting services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business process solutions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business risk services</a
-                          >
-                          <a href="#" class="primary hover-cc">Cybersecurity</a>
-                          <a href="#" class="primary hover-cc"
-                            >Forensic and investigation services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Mergers and acquisitions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Recovery and reorganisation</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Transactional advisory services</a
-                          >
-                          <a href="#" class="primary hover-cc">Valuations</a>
-                        </div>
+                        <a href="#" class="primary hover-cc"
+                          >Business process solutions</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Business risk services</a
+                        >
+                        <a href="#" class="primary hover-cc">Cybersecurity</a>
+                        <a href="#" class="primary hover-cc"
+                          >Forensic and investigation services</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Mergers and acquisitions</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Recovery and reorganisation</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Transactional advisory services</a
+                        >
+                        <a href="#" class="primary hover-cc">Valuations</a>
                       </div>
-                      <div class="col-5 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
+                    </div>
+                    <div class="col-5 p-5 ms-5">
+                      <div class="main-card">
+                        <div class="image-wrapper">
+                          <img
+                            src="./assets/img/client-behaviour-300x300.jpg"
+                            alt="Formula driver"
+                          />
+                        </div>
+                        <div class="text-wrapper p-4">
+                          <div class="card-tag darkgray">
+                            BUSINESS RESILENCE
                           </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
+                          <a href="#">
+                            <p class="fs-2 primary my-4 fw-600">
+                              Returning your business
                             </p>
-                          </div>
+                          </a>
+
+                          <br />
+                          <p class="card-info mt-2">
+                            Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Quis, temporibus?
+                          </p>
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
-                    >
-                      <div class="col-7">
-                        <div
-                          class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                  </div>
+                  <div
+                    class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
+                  >
+                    <div class="col-7">
+                      <div
+                        class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                      >
+                        <p class="title">Tax</p>
+                        <a href="#" class="primary hover-cc"
+                          >Business consulting services</a
                         >
-                          <p class="title">Tax</p>
-                          <a href="#" class="primary hover-cc"
-                            >Business consulting services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business process solutions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Business risk services</a
-                          >
-                          <a href="#" class="primary hover-cc">Cybersecurity</a>
-                          <a href="#" class="primary hover-cc"
-                            >Forensic and investigation services</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Mergers and acquisitions</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Recovery and reorganisation</a
-                          >
-                          <a href="#" class="primary hover-cc"
-                            >Transactional advisory services</a
-                          >
-                          <a href="#" class="primary hover-cc">Valuations</a>
-                        </div>
+                        <a href="#" class="primary hover-cc"
+                          >Business process solutions</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Business risk services</a
+                        >
+                        <a href="#" class="primary hover-cc">Cybersecurity</a>
+                        <a href="#" class="primary hover-cc"
+                          >Forensic and investigation services</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Mergers and acquisitions</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Recovery and reorganisation</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Transactional advisory services</a
+                        >
+                        <a href="#" class="primary hover-cc">Valuations</a>
                       </div>
-                      <div class="col-5 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
+                    </div>
+                    <div class="col-5 p-5 ms-5">
+                      <div class="main-card">
+                        <div class="image-wrapper">
+                          <img
+                            src="./assets/img/client-behaviour-300x300.jpg"
+                            alt="Formula driver"
+                          />
+                        </div>
+                        <div class="text-wrapper p-4">
+                          <div class="card-tag darkgray">
+                            BUSINESS RESILENCE
                           </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
+                          <a href="#">
+                            <p class="fs-2 primary my-4 fw-600">
+                              Returning your business
                             </p>
-                          </div>
+                          </a>
+
+                          <br />
+                          <p class="card-info mt-2">
+                            Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Quis, temporibus?
+                          </p>
                         </div>
                       </div>
-                    </div> -->
+                    </div>
+                  </div> -->
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-                    Insights
-                  </a> -->
+                <a href="insights.html" class="primary hover-cc sub-primary">
+                  E-nəşr
+                </a>
               </nav>
             </div>
           </div>
