mobile fix and full fix

--- a/careers-values.html
+++ b/careers-values.html
@@ -490,14 +490,14 @@
                                 - Sara Jane
                                 Knox</a>
                         </div>
-                        <div class="wrapper flex flex-column">
+                        <!-- <div class="wrapper flex flex-column">
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <a href="./student-career.html"
                                     class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
                                     FAQ
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                     <div class="col-12 col-lg-9">
