--- a/services-tax.html
+++ b/services-tax.html
@@ -463,7 +463,7 @@
               </div>
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                  Məsləhət
+                  Gömrük Xidmətləri
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
@@ -492,7 +492,7 @@
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-7  my-3">Gömrük Xidmətləri</a>
+                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                 </p>
               </div>
 
