--- a/student-career.html
+++ b/student-career.html
@@ -434,22 +434,52 @@
             </div>
             <div class="nav-drop-menu d-flex flex-column my-3">
               <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Our values</a>
-              <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Learning & development</a>
+              <a href="./careers-values.html" class="primary hover-cc fs-1-7 fw-600 my-3">Learning &
+                development</a>
             </div>
-            <div class="wrapper flex flex-column">
-              <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <a href="./student-career.html" class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2 my-3">
-                  Students
-                </a>
-              </div>
+
+            <div class="nav-wrapper d-flex justify-content-between align-items-center">
+              <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                Students
+              </p>
+              <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
             </div>
-            <div class="wrapper flex flex-column">
-              <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <a href="./student-career.html" class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2 my-3">
-                  Experienced hires
-                </a>
-              </div>
+            <div class="nav-drop-menu d-flex flex-column my-3">
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate Fabio
+                Luis de
+                Sousa</a>
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate - Mark
+                Bishop</a>
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate -
+                Shannon Tan</a>
             </div>
+
+            <div class="nav-wrapper d-flex justify-content-between align-items-center">
+              <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                Experienced hires
+              </p>
+              <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+            </div>
+            <div class="nav-drop-menu d-flex flex-column my-3">
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced
+                hires - Tony
+                Windle</a>
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced hire
+                - Jessica
+                Zetterquist</a>
+              <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced Hire
+                - Sara Jane
+                Knox</a>
+            </div>
+            <!-- <div class="wrapper flex flex-column">
+                <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                    <a href="./student-career.html"
+                        class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
+                        FAQ
+                    </a>
+                </div>
+            </div> -->
+
           </div>
           <div class="col-12 col-lg-9 ">
             <div class="service-card-container d-flex flex-wrap">
