--- a/fields.html
+++ b/fields.html
@@ -525,14 +525,14 @@
                     <div class="col-lg-12">
                         <h3>Get in touch</h3>
                         <p class="mt-5">Contact our industry professionals...</p>
-                        <button class="btndefault btn-w border-w">go to contact form</button>
+                        <button class="btndefault btn-w border-w"><a href="contact.html">go to contact form</a></button>
                     </div>
                 </div>
             </div>
         </section>
         <section id="create-card">
             <div class="container">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between mobile-position">
                     <h2>Related insights</h2>
                     <a class="btn-cont" href="#">
                         <button class="btndefault btn-r border-w ">
