--- a/services-tax-2.html
+++ b/services-tax-2.html
@@ -440,17 +440,17 @@
           <div class="col-12 col-lg-2">
             <div class="wrapper flex flex-column">
               <div class="fs-2-5 my-3">Xidmətlərimiz</div>
+
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <p class="nav-drop-head primary fw-600 fs-1-9 hover-cc ls-2">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
                   Vergi
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu d-flex flex-column my-3">
-                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3 left-active">Vergi məsləhət
+                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi xidmətləri</a>
+                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi məsləhət
                   xidmətləri</a>
-                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 ">Vergi auditi xidmətləri</a>
-
                 <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi planlaması
                   xidmətləri</a>
                 <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi sahəsində sair
@@ -462,8 +462,8 @@
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
-              <div class="nav-drop-menu d-flex flex-column my-3 ">
-                <a href="./services-accountment-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 ">Muhasibat uçotunun
+              <div class="nav-drop-menu d-flex flex-column my-3">
+                <a href="./services-accountment-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Muhasibat uçotunun
                   aparılması üzrə autsors
                   xidməti</a>
                 <a href="./services-accountment-2.html" class="primary hover-cc  fs-1-7 fw-600 my-3">Maliyyə uçotunun
@@ -475,14 +475,15 @@
               </div>
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                  Məsləhət
+                  Gömrük Xidmətləri
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
-              <div class="nav-drop-menu my-3 ">
-                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 ">Xarici ticarət və
+              <div class="nav-drop-menu my-2">
+                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
                   gömrük xidmətləri</a>
               </div>
+
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
@@ -503,11 +504,10 @@
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-7  my-3">Gömrük Xidmətləri</a>
-                </p>
+                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                 </p>
               </div>
+
             </div>
           </div>
           <div class="col-12 col-lg-7 text-area pl-80">
