--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         </div>
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
+            <form action="#">
+              <input type="text">
+            </form>
             <a href="#" class="hover-cc primary">
               Find your local member firm
             </a>
