--- a/insights.html
+++ b/insights.html
@@ -99,13 +99,16 @@
                 </div>
                 <div class="col-6 desk-nav justify-content-end">
                     <div class="icon-box d-flex justify-content-end align-items-center">
-                        <a href="#" class="hover-cc primary">
+                        <form action="#" class="toggleInput" style="display: none;">
+                            <input type="text" class="search-input">
+                        </form>
+                        <a href="#" class="hover-cc primary toggleInput">
                             Find your local member firm
                         </a>
-                        <a href="#"><i class="fas fa-bookmark primary hover-cc"></i></a>
-                        <a href="#"><i class="fas fa-globe-europe primary hover-cc"></i>
+                        <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+                        <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
                         </a>
-                        <a href="#"><i class="fas fa-search primary hover-cc"></i></a>
+                        <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
                     </div>
                 </div>
             </div>
