--- a/services-tax.html
+++ b/services-tax.html
@@ -40,7 +40,8 @@
             <div class="wrapper d-flex flex-column align-items-center px-5">
               <a href="./audit.html" class="primary hover-cc sub-act mt-3" data-toggle="audit-menu">Audit
                 Xidmətləri</a>
-              <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi Xidmətləri</a>
+              <a href="./services-tax.html" class="primary hover-cc sub-act" data-toggle="tax-menu">Vergi
+                Xidmətləri</a>
               <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Məsləhət
                 Xidmətləri</a>
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
@@ -92,13 +93,16 @@
         </div>
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
-            <a href="#" class="hover-cc primary">
+            <form action="#" class="toggleInput" style="display: none;">
+              <input type="text" class="search-input">
+            </form>
+            <a href="#" class="hover-cc primary toggleInput">
               Find your local member firm
             </a>
-            <a href="#"><i class="fas fa-bookmark primary hover-cc"></i></a>
-            <a href="#"><i class="fas fa-globe-europe primary hover-cc"></i>
+            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
             </a>
-            <a href="#"><i class="fas fa-search primary hover-cc"></i></a>
+            <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
         </div>
       </div>
@@ -138,9 +142,12 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Audit xidmətləri</p>
-                        <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının auditi</a>
-                        <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının auditi</a>
-                        <a href="./audit-3.html" class="primary hover-cc">Əmlakın qiymətləndirilməsinin
+                        <a href="./audit-1.html" class="primary hover-cc">Vergi hesabatlarının
+                          auditi</a>
+                        <a href="./audit-2.html" class="primary hover-cc">Maliyyə hesabatlarının
+                          auditi</a>
+                        <a href="./audit-3.html" class="primary hover-cc">Əmlakın
+                          qiymətləndirilməsinin
                           auditi</a>
                         <a href="./audit-4.html" class="primary hover-cc">Nizamnamə kapitalının
                           formalaşdırılmasın auditi</a>
@@ -174,10 +181,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Vergi xidmətləri</p>
-                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi xidmətləri</a>
-                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət xidmətləri</a>
-                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi planlaması xidmətləri</a>
-                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində sair xidmətlər</a>
+                        <a href="./services-tax-1.html" class="primary hover-cc">Vergi auditi
+                          xidmətləri</a>
+                        <a href="./services-tax-2.html" class="primary hover-cc">Vergi məsləhət
+                          xidmətləri</a>
+                        <a href="./services-tax-3.html" class="primary hover-cc">Vergi
+                          planlaması xidmətləri</a>
+                        <a href="./services-tax-4.html" class="primary hover-cc">Vergi sahəsində
+                          sair xidmətlər</a>
                       </div>
                     </div>
                     <div class="col-5 p-5 ms-5">
@@ -208,12 +219,14 @@
                     <div class="col-7">
                       <div class="wrapper d-flex flex-column align-items-start px-5 ms-5">
                         <p class="title mt-1">Muhasibatlıq xidmətləri</p>
-                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə uçotunun üzrə autsors
+                        <a href="./services-accountment-2.html" class="primary hover-cc">Maliyyə
+                          uçotunun üzrə autsors
                           xidmətləri</a>
                         <a href="./services-accountment-1.html" class="primary hover-cc">Muhasibat uçotunun üzrə autsors
                           xidməti</a>
 
-                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət rəhbərliyinə xərclər və
+                        <a href="./services-accountment-3.html" class="primary hover-cc">Şirkət
+                          rəhbərliyinə xərclər və
                           gəlirlilik haqqında
                           hesabatların hazırlanması</a>
                       </div>
@@ -263,7 +276,8 @@
                       <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
                       <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
                       <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                        hospitallar</a>
                     </div>
                   </div>
 
