--- a/about-us.html
+++ b/about-us.html
@@ -25,6 +25,7 @@
       <span></span>
     </div>
     <div class="mobile-menu">
+
       <nav class="d-flex flex-column justify-content-between">
         <a href="./about-us.html" class="fs-3 primary hover-cc sub-primary">
           Haqqımızda
@@ -73,7 +74,22 @@
         <a href="insights.html" class=" fs-3 primary hover-cc sub-primary">
           E-nəşr
         </a>
+
+
       </nav>
+      <div class="col-6  justify-content-end search">
+        <div class="icon-box d-flex justify-content-end align-items-center search_2">
+          <form action="#" class="toggleInput" style="display: none;">
+            <input type="text" class="search-input" placeholder="Search">
+          </form>
+          <a href="#" class="hover-cc primary toggleInput">
+            Find your local member firm
+          </a>
+          <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+          <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
+          <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+        </div>
+      </div>
     </div>
     <div class="container header-top">
       <div class="row justify-content-between align-items-center top-header">
@@ -94,12 +110,13 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input">
+              <input type="text" class="search-input" placeholder="Search">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Find your local member firm
             </a>
-            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+            <a href="#" style="border-left: 1px solid lightgray !important;"><i
+                class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
             </a>
             <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
