--- a/insights.html
+++ b/insights.html
@@ -536,7 +536,7 @@
                 </div>
             </div>
         </section>
-        <div class="container">
+        <div class="container mb-70">
             <div class="row px-0 mx-0">
                 <div class="col-12 px-0 pos-rel">
                     <h2 class="fs-1-9 mt-60 ">Featured topics</h2>
