--- a/audit-4.html
+++ b/audit-4.html
@@ -452,6 +452,7 @@
                     <div class="col-12 col-lg-2">
                         <div class="wrapper flex flex-column">
                             <div class="fs-2-5 my-3">Xidmətlərimiz</div>
+
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
                                     Vergi
@@ -459,8 +460,7 @@
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
                             <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-tax-1.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3 left-active">Vergi auditi
+                                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi
                                     xidmətləri</a>
                                 <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
                                     məsləhət
@@ -478,9 +478,9 @@
                                 </p>
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3 ">
+                            <div class="nav-drop-menu d-flex flex-column my-3">
                                 <a href="./services-accountment-1.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3 ">Muhasibat uçotunun
+                                    class="primary hover-cc fs-1-7 fw-600 my-3">Muhasibat uçotunun
                                     aparılması üzrə autsors
                                     xidməti</a>
                                 <a href="./services-accountment-2.html"
@@ -494,15 +494,17 @@
                             </div>
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Məsləhət
+                                    Gömrük Xidmətləri
                                 </p>
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
-                            <div class="nav-drop-menu my-3 ">
-                                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 ">Xarici
+                            <div class="nav-drop-menu my-2">
+                                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
                                     ticarət və
                                     gömrük xidmətləri</a>
                             </div>
+
+
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
                                     Audit Xidmətləri
@@ -525,8 +527,7 @@
 
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    <a href="./services-tax-4.html" class="primary hover-cc fs-1-7  my-3">Gömrük
-                                        Xidmətləri</a>
+                                    <a href="./services-tax-4.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                                 </p>
                             </div>
 
