--- a/about-us.html
+++ b/about-us.html
@@ -552,8 +552,8 @@
         <div class="col-12 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fs-2-5 fw-600">Connect</p>
-            <a href="#team">Meet our people</a>
-            <a href="#">Contact us</a>
+            <a href="team.html">Meet our people</a>
+            <a href="contact.html">Contact us</a>
           </div>
         </div>
         <div class="col-12 col-lg-2 desk-footer">
