--- a/insights.html
+++ b/insights.html
@@ -714,24 +714,24 @@
                 <div class="col-12 col-lg-2 desk-footer">
                     <div class="link-wrapper">
                         <p class="title fs-2-5 fw-600">Connect</p>
-                        <a href="#">Meet our people</a>
-                        <a href="#">Contact us</a>
+                        <a href="team.html">Meet our people</a>
+                        <a href="contact.html">Contact us</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 desk-footer">
                     <div class="link-wrapper">
                         <p class="title fw-600">About</p>
                         <a href="./about-us.html">Haqqımızda</a>
-                        <a href="#">Careers</a>
-                        <a href="#">Insights</a>
+                        <!-- <a href="#">Careers</a> -->
+                        <a href="insights.html">Insights</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 desk-footer">
                     <div class="link-wrapper">
                         <p class="title fw-600">Legal</p>
-                        <a href="#">Privacy</a>
-                        <a href="#">Cookie policy</a>
-                        <a href="#">Disclaimer</a>
+                        <a href="privacy.html">Məxfilik</a>
+                        <a href="policy.html">Cookie policy</a>
+                        <a href="disclaimer.html">Disclaimer</a>
                     </div>
                 </div>
                 <div class="col-12 mobile-footer my-5">
@@ -744,8 +744,8 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="#">Meet our people</a>
-                            <a href="#">Contact us</a>
+                            <a href="team.html">Meet our people</a>
+                            <a href="contact.html">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -759,9 +759,9 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="#">About us</a>
-                            <a href="#">Careers</a>
-                            <a href="#">Insights</a>
+                            <a href="about-us.html">About us</a>
+                            <!-- <a href="#">Careers</a> -->
+                            <a href="insights.html">Insights</a>
                         </div>
                     </div>
                 </div>
@@ -786,7 +786,7 @@
                         <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-linkedin-in fs-40 ml-70 ml-40"></i>
+                        <i class="fab fa-linkedin-in fs-40  ml-70 ml-40"></i>
                     </a>
                     <a href="#">
                         <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
